# squirrel

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile
emsq/: CMakeLists.txt  emsq.c
include/: squirrel.h
sqstdlib/: sqstdsystem.cpp
squirrel/: Makefile  sqfuncstate.cpp  sqfuncstate.h  sqtable.h  sqvm.cpp  sqvm.h
